<?xml version="1.0"?>
<package format="2">
  <name>rospberrypizero</name>
  <version>0.1.0</version>
  <description>The ROSpberryPiZero(W) bootstrap package</description>

  <maintainer email="jazib980@gmail.com">Jazib Dawre</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/jazibdawre/rospberrypi</url>

  <author email="alansrobotlab@gmail.com">pi</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
